# AbstractAPI-Python-SDK

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  testing-requirements.txt  tox.ini
.github/actions/setup/: action.yml
.github/workflows/: ci.yml  unit-tests.yml
docs/: README.md  requirements.txt
docs/source/: changelog.rst  conf.py  index.rst
src/abstract_api/: __init__.py  _base_response.py  _base_service.py  email_validation.py  ip_geolocation.py
src/abstract_api/avatars/: __init__.py  (+2 more)
tests/: README.md  common_assertions.py  conftest.py  test_avatars.py  test_company_enrichment.py  utils.py
tests/avatars/: test_avatars.py
tests/company_enrichment/: conftest.py  test_company_enrichment.py  test_company_enrichment_response.py
tests/email_validation/: conftest.py  test_email_validation.py  test_email_validation_response.py
tests/exchange_rates/: conftest.py  test__multiple_exchange_rates_response.py  test_exchange_rates.py  test_exchange_rates_conversion_response.py  test_historical_exchange_rates_response.py  test_live_exchange_rates_response.py
tests/holidays/: conftest.py  test_holidays.py  test_holidays_response.py
tests/iban_validation/: conftest.py  test_iban_validation.py  test_iban_validation_response.py
tests/image_processing/: conftest.py  test_image_processing.py  test_image_processing_response.py
tests/ip_geolocation/: conftest.py  test_ip_geolocation.py  test_ip_geolocation_response.py
tests/phone_validation/: conftest.py  test_phone_validation.py  test_phone_validation_response.py
tests/timezone/: conftest.py  test_current_timezone_response.py  test_timezone.py  test_timezone_conversion_response.py
tests/vat/: conftest.py  test_vat.py  test_vat_calculation_response.py  test_vat_categories_response.py  test_vat_validation_response.py
tests/web_scraping/: test_web_scraping.py
tests/website_screenshot/: test_website_screenshot.py
(+203 files in other folders)
