[build-system]
requires = ["setuptools>=68.2.2"]
build-backend = "setuptools.build_meta"
[project]
name = "abstract-api"
version = "0.0.1"
authors = [
  { name="Ebram Shehata", email="ebram96@gmail.com" },
]
description = "A Python SDK for using AbstractAPI services"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ebram96/AbstractAPI-Python-SDK"
"Bug Tracker" = "https://github.com/ebram96/AbstractAPI-Python-SDK/issues"
